--- a/index.html
+++ b/index.html
@@ -634,8 +634,8 @@
                     <div class="progress" id="payment-progress"></div>
                 </div>
                 <div class="progress-labels">
-                    <span>Assinatura: R$ 7.500,00</span>
-                    <span>Conclusão: R$ 7.500,00</span>
+                    <span>Assinatura: R$ 6.000,00</span>
+                    <span>Conclusão: R$ 6.000,00</span>
                 </div>
             </div>
             
@@ -718,18 +718,18 @@
             <div class="contact-info">
                 <div class="contact-item">
                     <i class="fas fa-phone"></i>
-                    <span>(85) 98765-4321</span>
+                    <span>(85) 98159-9549</span>
                 </div>
                 <div class="contact-item">
                     <i class="fas fa-envelope"></i>
-                    <span>contato@novosga.com.br</span>
+                    <span>lukyam.madeira@gmail.com</span>
                 </div>
                 <div class="contact-item">
                     <i class="fas fa-map-marker-alt"></i>
                     <span>Fortaleza, CE</span>
                 </div>
             </div>
-            <p class="copyright">© 2025 NOVOSGA - Todos os direitos reservados</p>
+            <p class="copyright">© Lukyam Madeira - Desenvolvimento com Amor</p>
         </div>
     </footer>
     
