--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
                         </div>
                         <div class="checkbox-item">
                             <input type="checkbox" name="treinamento" id="treinamento" value="-1000">
-                            <label for="treinamento">Reduzir treinamento de 8 para 4 horas</label>
+                            <label for="treinamento">Substituir o treinamento conjunto por um treinamento exclusivo com um colaborador principal.</label>
                             <span class="price-change">- R$ 1.000,00</span>
                         </div>
                         <div class="checkbox-item">
