--- a/index.html
+++ b/index.html
@@ -615,11 +615,11 @@
                 </div>
                 <div class="info-card">
                     <h3>Profissionais</h3>
-                    <p>Lukyam Madeira e Aurélio Neto</p>
+                    <p>Lukyam Madeira (Coordenador) e Aurélio Neto (Auxiliar)</p>
                 </div>
                 <div class="info-card">
                     <h3>Data</h3>
-                    <p>31/03/2025</p>
+                    <p>04/04/2025</p>
                 </div>
                 <div class="info-card">
                     <h3>Validade</h3>
@@ -673,9 +673,9 @@
                 <div class="form-group">
                     <div class="checkbox-group">
                         <div class="checkbox-item">
-                            <input type="checkbox" name="garantia" id="garantia" value="-1500">
+                            <input type="checkbox" name="garantia" id="garantia" value="-500">
                             <label for="garantia">Reduzir tempo de garantia de 6 para 3 meses</label>
-                            <span class="price-change">- R$ 1.500,00</span>
+                            <span class="price-change">- R$ 500,00</span>
                         </div>
                         <div class="checkbox-item">
                             <input type="checkbox" name="suporte" id="suporte" value="-1000">
@@ -683,9 +683,9 @@
                             <span class="price-change">- R$ 1.000,00</span>
                         </div>
                         <div class="checkbox-item">
-                            <input type="checkbox" name="treinamento" id="treinamento" value="-1000">
+                            <input type="checkbox" name="treinamento" id="treinamento" value="-500">
                             <label for="treinamento">Substituir o treinamento conjunto de toda a equipe por um único treinamento com um colaborador de sua escolha</label>
-                            <span class="price-change">- R$ 1.000,00</span>
+                            <span class="price-change">- R$ 500,00</span>
                         </div>
                         <div class="checkbox-item">
                             <input type="checkbox" name="documentacao" id="documentacao" value="-500">
