--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orçamento - NOVOSGA | NOHC</title>
+    <title>Orçamento para Sistema de Gerenciamento de Filas - NOVOSGA | NOHC</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -619,7 +619,7 @@
                 </div>
                 <div class="info-card">
                     <h3>Data</h3>
-                    <p>31/03/2025</p>
+                    <p>04/04/2025</p>
                 </div>
                 <div class="info-card">
                     <h3>Validade</h3>
