--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orçamento para Sistema de Gerenciamento de Filas - NOVOSGA | NOHC</title>
+    <title>Orçamento NOVOSGA | NOHC</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -673,9 +673,9 @@
                 <div class="form-group">
                     <div class="checkbox-group">
                         <div class="checkbox-item">
-                            <input type="checkbox" name="garantia" id="garantia" value="-1500">
+                            <input type="checkbox" name="garantia" id="garantia" value="-500">
                             <label for="garantia">Reduzir tempo de garantia de 6 para 3 meses</label>
-                            <span class="price-change">- R$ 1.500,00</span>
+                            <span class="price-change">- R$ 500,00</span>
                         </div>
                         <div class="checkbox-item">
                             <input type="checkbox" name="suporte" id="suporte" value="-1000">
@@ -683,14 +683,14 @@
                             <span class="price-change">- R$ 1.000,00</span>
                         </div>
                         <div class="checkbox-item">
-                            <input type="checkbox" name="treinamento" id="treinamento" value="-1000">
+                            <input type="checkbox" name="treinamento" id="treinamento" value="-500">
                             <label for="treinamento">Substituir o treinamento conjunto de toda a equipe por um único treinamento com um colaborador de sua escolha</label>
-                            <span class="price-change">- R$ 1.000,00</span>
+                            <span class="price-change">- R$ 500,00</span>
                         </div>
                         <div class="checkbox-item">
-                            <input type="checkbox" name="documentacao" id="documentacao" value="-500">
+                            <input type="checkbox" name="documentacao" id="documentacao" value="-200">
                             <label for="documentacao">Documentação apenas técnica (sem manual do usuário)</label>
-                            <span class="price-change">- R$ 500,00</span>
+                            <span class="price-change">- R$ 200,00</span>
                         </div>
                     </div>
                 </div>
