--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
                 </div>
                 <div class="info-card">
                     <h3>Profissionais</h3>
-                    <p>Lukyam Madeira e Aurélio Neto</p>
+                    <p>Lukyam Madeira (Coordenador do Projeto) e Aurélio Neto (Auxiliar de Implementação)</p>
                 </div>
                 <div class="info-card">
                     <h3>Data</h3>
